@@ -42,7 +42,7 @@ int modem_fd = -1;		/* modem device fp (for proxy reads) */
 MONITORS *monitors = 0;		/* Monitor pipes */
 PIPE *pipes = 0;		/* Command pipes */
 int modem_hup = 0;		/* have we seen a modem HUP? */
-int sockfd = -1;		/* controling socket */
+int sockfd = -1;		/* socket for doing interface ioctls */
 int delayed_quit = 0;		/* has the user requested a delayed quit? */
 int request_down = 0;		/* has the user requested link down? */
 int request_up = 0;		/* has the user requested link down? */
