@@ -1,5 +1,6 @@
 Major changes between version 0.99.1 and 0.99.2.
 ------------------------------------------------
+  - Avoid using an extra socket unecessarily.
   - Use close on exec flag rather than trying (and failing) to
     figure out what to close every time we fork and exec.
   - Allow the value for a debug fifo command to be given as
